docs/api/qiskit/0.39/qiskit.algorithms.gradients.ParamShiftSamplerGradient.mdx
---
title: ParamShiftSamplerGradient (v0.39)
description: API reference for qiskit.algorithms.gradients.ParamShiftSamplerGradient in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.gradients.ParamShiftSamplerGradient
---

# ParamShiftSamplerGradient

<Class id="qiskit.algorithms.gradients.ParamShiftSamplerGradient" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/gradients/param_shift_sampler_gradient.py" signature="ParamShiftSamplerGradient(sampler, **options)" modifiers="class">
  Bases: [`qiskit.algorithms.gradients.base_sampler_gradient.BaseSamplerGradient`](qiskit.algorithms.gradients.BaseSamplerGradient "qiskit.algorithms.gradients.base_sampler_gradient.BaseSamplerGradient")

  Compute the gradients of the sampling probability by the parameter shift rule.

  **Parameters**

  *   **sampler** ([`BaseSampler`](qiskit.primitives.BaseSampler "qiskit.primitives.base.base_sampler.BaseSampler")) – The sampler used to compute the gradients.
  *   **options** – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > gradient’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting

  ## Methods

  <span id="qiskit-algorithms-gradients-paramshiftsamplergradient-run" />

  ### run

  <Function id="qiskit.algorithms.gradients.ParamShiftSamplerGradient.run" signature="ParamShiftSamplerGradient.run(circuits, parameter_values, parameters=None, **options)">
    Run the job of the sampler gradient on the given circuits.

    **Parameters**

    *   **circuits** – The list of quantum circuits to compute the gradients.
    *   **parameter\_values** – The list of parameter values to be bound to the circuit.
    *   **parameters** – The sequence of parameters to calculate only the gradients of the specified parameters. Each sequence of parameters corresponds to a circuit in `circuits`. Defaults to None, which means that the gradients of all parameters in each circuit are calculated.
    *   **options** – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > gradient’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting

    **Returns**

    The job object of the gradients of the sampling probability. The i-th result corresponds to `circuits[i]` evaluated with parameters bound as `parameter_values[i]`. The j-th quasi-probability distribution in the i-th result corresponds to the gradients of the sampling probability for the j-th parameter in `circuits[i]`.

    **Raises**

    **ValueError** – Invalid arguments are given.
  </Function>

  <span id="qiskit-algorithms-gradients-paramshiftsamplergradient-update-default-options" />

  ### update\_default\_options

  <Function id="qiskit.algorithms.gradients.ParamShiftSamplerGradient.update_default_options" signature="ParamShiftSamplerGradient.update_default_options(**options)">
    Update the gradient’s default options setting.

    **Parameters**

    **\*\*options** – The fields to update the default options.
  </Function>

  ## Attributes

  ### options

  <Attribute id="qiskit.algorithms.gradients.ParamShiftSamplerGradient.options">
    Return the union of sampler options setting and gradient default options, where, if the same field is set in both, the gradient’s default options override the primitive’s default setting.

    **Return type**

    [`Options`](qiskit.providers.Options "qiskit.providers.options.Options")

    **Returns**

    The gradient default + sampler options.
  </Attribute>
</Class>

